<resources>
    <string name="app_name">TC6min</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_formulario">Adicionar</string>
    <string name="title_activity_lista_pacientes">TC6</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>

    <string name="title_activity_perfil">Perfil</string>
    <string name="title_activity_teste">Teste</string>
    <string name="title_activity_cronometro">Teste da Caminhada</string>
    <string name="title_activity_valores_basais">Valores Basais</string>

    <string name="dialog_abandonar_voltar">Deseja abandonar o teste? Todos os dados do teste serão perdidos.</string>

    <string name="dialog_yes">Sim</string>
    <string name="dialog_no">Não</string>
    <string name="dialog_ok">OK</string>

    <string name="dialog_parar">Diga ao paciente: \"Por favor, pare onde está\".</string>
    <string name="concluido">Teste Concluído!</string>

    <string name="fc">FC</string>
    <string name="spo2">SpO2</string>
    <string name="dispneia">Dispneia</string>
    <string name="fad_mmii">FAD MMII</string>
    <string name="salvar">SALVAR</string>

    <string name="dados_do_1_minuto">Dados do 1º minuto</string>
    <string name="dados_do_2_minuto">Dados do 2º minuto</string>
    <string name="dados_do_3_minuto">Dados do 3º minuto</string>
    <string name="dados_do_4_minuto">Dados do 4º minuto</string>
    <string name="dados_do_5_minuto">Dados do 5º minuto</string>
    <string name="dados_do_6_minuto">Dados do 6º minuto</string>

    <string name="frase1">Você está indo bem. Ainda faltam 5 minutos.</string>
    <string name="frase2">Mantenha um bom trabalho. Ainda restam 4 minutos.</string>
    <string name="frase3">Você está indo muito bem. Já foi metade do teste.</string>
    <string name="frase4">Mantenha um bom trabalho. Faltam apenas 2 minutos.</string>
    <string name="frase5">Você está indo muito bem. Falta apenas 1 minuto.</string>
    <string name="frase_de_apoio">Frase de apoio</string>
    <string name="o2_supl">O2 Supl.</string>
    <string name="comecar_teste">COMEÇAR TESTE</string>
    <string name="confirmar_valores">Confirmar valores</string>
    <string name="title_activity_valores_finais">Valores Finais</string>
    <string name="title_activity_valores_recuperacao">Valores de Recuperação</string>
    <string name="numero_de_paradas">Paradas: </string>
    <string name="title_activity_lista_testes">Testes do Paciente</string>
    <string name="teste_singular">teste</string>
    <string name="text_inicial_vazio">Você ainda não tem pacientes cadastrados. Adicione um paciente novo no botão no canto inferior direito da tela</string>
    <string name="text_inicial">Selecione um paciente para realizar um novo teste ou verificar os resultados de testes anteriores</string>
    <string name="title_activity_analise_teste">Análise do Teste</string>
    <string name="bpm">bpm</string>
    <string name="BASAL">BASAL</string>
    <string name="RECUP">RECUP.</string>
    <string name="_1_minuto">1\'</string>
    <string name="_2_minuto">2\'</string>
    <string name="_3_minuto">3\'</string>
    <string name="_4_minuto">4\'</string>
    <string name="_5_minuto">5\'</string>
    <string name="_final">FINAL</string>
    <string name="_sp_unidade">%</string>
    <string name="_disp_unidade" />
    <string name="_fad_unidade" />
    <string name="_pa_unidade">mmHg</string>
    <string name="_gc_unidade">mg/dL</string>
    <string name="_6_minuto">6º min.</string>
    <string name="_porcento">%</string>
    <string name="metros">m</string>
    <string name="virgula">,</string>
    <string name="anos">anos</string>
    <string name="resultados">Resultados</string>
    <string name="frequ_ncia_card_aca">Frequência Cardíaca</string>
    <string name="saturacao_de_pulso_de_o2">Saturação de Pulso de O2</string>
    <string name="saturacao_de_pulso_de_o">Saturação de Pulso de O</string>
    <string name="observacao">Observação</string>
    <string name="glicemia_capilar">Glicemia Capilar</string>
    <string name="pressao_arterial">Pressão Arterial</string>
    <string name="dist_ncia_percorrida">Distância Percorrida</string>
    <string name="dist_ncia_restante">Distância restante</string>
    <string name="m">m</string>
    <string name="confira_os_dados_anteriores">Confira os dados anteriores:</string>
    <string name="bot_o_fechar_teste">Botão fechar teste</string>
    <string name="editar">Editar</string>
    <string name="deletar">Deletar</string>
    <string name="dialog_deletar">Deseja deletar este paciente e todos os seus testes?</string>
    <string name="dialog_deletar_teste">Deseja deletar este teste e todos os seus resultados?</string>
    <string name="atencao_deletar">Deletar Paciente</string>
    <string name="atencao_deletar_teste">Deletar Teste</string>
    <string name="atencao_sair">Abandonar Teste</string>

    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="ok">OK</string>
    <string name="configura_es">Configurações</string>
    <string name="testes">testes</string>
    <string name="divisor">|</string>
    <string name="foto_do_paciente">Foto do paciente</string>
    <string name="gc">GC</string>
    <string name="fadiga_mmii">Fadiga MMII</string>
    <string name="pa">PA</string>
    <string name="finalizar_teste">FINALIZAR TESTE</string>
    <string name="registrar_agora">Registrar Agora</string>
    <string name="aguarde_2min_para_registrar_os_valores_de_recupera_o">Aguarde 2min para registrar os valores de recuperação</string>
    <string name="title_activity_preferencias">Configurações</string>
    <string name="pa_s_de_origem_da_f_rmula">País de origem da fórmula</string>
    <string name="title_activity_pre_teste">Variáveis do Teste</string>
    <string name="selecione_os_sinais">Selecione quais sinais desejas coletar no teste:</string>
    <string name="antes">Basal</string>
    <string name="durante">Durante</string>
    <string name="depois">Final</string>
    <string name="analise_de_desempenho">Análise de Desempenho:</string>
    <string name="de">de</string>
    <string name="tamanho_da_volta">Tamanho da Volta</string>
    <string name="tamanho_da_volta_descricao">Defina qual o tamanho que o botão de adicionar uma volta terá (metros)</string>
    <string name="selecionar_equacoes">Selecionar Equações</string>
    <string name="selecionar_equacoes_descricao">Selecione quais equações você deseja usar para calcular a distância prevista na análise do teste.</string>
    <string name="nome">Nome:</string>
    <string name="idade">Idade:</string>
    <string name="distancia_percorrida_analise">Distância Percorrida:</string>
    <string name="velocidade_m_dia">Velocidade Média:</string>
    <string name="repouso_min">Recup.</string>
    <string name="basal">Basal</string>
    <string name="observa_es">Observações</string>
    <string name="observa_es_sobre_o_teste">Observações sobre o teste</string>
    <string name="paradas">Paradas:</string>
    <string name="tempo_parado">Tempo Parado:</string>
    <string name="velocidade_volta">Velocidade por Volta </string>
    <string name="an_lise_do_teste">Análise do Teste</string>
    <string name="continuar">Continuar</string>
    <string name="press_o_diast_lica">Pressão Diastólica</string>
    <string name="testes_anteriores">TESTES ANTERIORES</string>
    <string name="o_paciente_ainda_n_o_realizou_nenhum_teste">Não há testes cadastrados</string>
    <string name="iniciar_teste">Iniciar teste</string>
    <string name="dados_do_paciente">DADOS CADASTRAIS</string>
    <string name="projeto_desenvolvido"><![CDATA[\u0009Desenvolvido com apoio do CNPq como parte do projeto de pesquisa \"Valores de referência para o Teste de Caminhada de Seis Minutos em crianças saudáveis no Brasil\".]]></string>
    <string name="aplica_o_desenvolvida_por_eduardo_h_p_pooch">\u0009Aplicação desenvolvida por Eduardo H. P. Pooch, aluno do curso de graduação de Informática Biomédica da Universidade Federal de Ciências da Saúde de Porto Alegre (UFCSPA) e bolsista de inciação tecnológica do CNPq, com orientação dos professores Cecilia Dias Flores (UFCSPA) e Marlus Karsten (UDESC).</string>
    <string name="sobre">Sobre</string>
    <string name="masculino">Masculino</string>
    <string name="feminino">Feminino</string>
    <string name="recupera_o">Recuperação</string>
    <string name="frequ_ncia_respirat_ria">Frequência Respiratória</string>
    <string name="alerta_fc">Valores de FC basal e final são obrigatórios pois são utilizados em uma fórmula</string>
    <string name="o2_suplementar">O2 Suplementar</string>
    <string name="referencias">Referências</string>
    <string name="recup">Recup.</string>
    <string name="suplementar">Suplementar</string>
    <string name="o">O</string>
    <string name="_2">2</string>
    <string name="cronometro_de_recuperacao">Cronômetro de Recuperação</string>
    <string name="tamanho_volta_resultados">Tamanho da Volta:</string>
    <string name="frequencia_cardiaca_1">Frequência Cardíaca (1\')</string>
    <string name="final_rec_1">Δ(F - R1)</string>
    <string name="final_rec_2">Δ(F - R2)</string>
    <string name="final_basal">Δ(F - B)</string>
    <string name="frequ_ncia_card_aca_2">Frequência Cardíaca (2\')</string>
    <string name="referencia_1">1) Britto RR, Probst VS, Andrade AF, Samora GA, Hernandes NA, Marinho PE, et al. Reference equations for the six–minute walk distance based on a Brazilian multicenter study. Braz J Phys Ther. 2013 Nov–Dec;17(6):556–63.</string>
    <string name="referencia_2">2) Dourado VZ, Vidotto MC, Guerra RL. Equações de referência para os testes de caminhada de campo em adultos saudáveis. J.Bras Pneumol 2011;37(5):607–14.</string>
    <string name="referencia_3">3) Soares MR, Pereira CAC. Six–minute walk test: reference values for healthy adults in Brazil. J Bras Pneu–mol. 2011 Sep–Oct;37(5):576–83.</string>
    <string name="referencia_4">4) Iwama AM, Andrade GN, Shima P, Tanni SE, Godoy I, Dourado VZ. The six–minute walk test and body weight–walk distance product in healthy Brazilian subjects. Braz J Med Biol Res. 2009 Nov;42(11):1080–5.</string>
    <string name="referencia_5">5) Hernandes NA, Karsten M. Testes clínicos de campo, com emprego de caminhada/marcha: teste de caminhada de seis minutos e 4–meter gait speed. In: Associação Brasileira de Fisioterapia Cardiorrespiratória e Fisioterapia em Terapia Intensiva; Martins JA, Karsten M, Dal Corso S, organizadores. PROFISIO Programa de Atualização em Fisioterapia Cardiovascular e Respiratória: Ciclo 1. Porto Alegre: Artmed Panamericana; 2014. p. 115–37. (Sistema de Educação Continuada a Distância, v. 1).</string>
    <string name="refer_ncias">Referências Bibliográficas</string>
    <string name="bibliotecas">BIBLIOTECAS</string>
    <string name="contato">CONTATO</string>
    <string name="info_adicionais">INFORMAÇÕES ADICIONAIS</string>
    <string name="section_format">Hello World from section: %1$d</string>


</resources>
