<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".controle.ListaPacientesActivity">

    <item
        android:id="@+id/action_referencias"
        android:icon="@drawable/icon_referencias"
        android:orderInCategory="1"
        android:title="@string/referencias"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sobre"
        android:icon="@drawable/icon_sobre"
        android:orderInCategory="2"
        android:title="@string/sobre"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_config"
        android:icon="@drawable/icon_config"
        android:orderInCategory="3"
        android:title="@string/configura_es"
        app:showAsAction="ifRoom" />


</menu>
