<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.edu.ufcspa.tc6m.controle.PreTesteActivity"
    tools:showIn="@layout/activity_pre_teste">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--Texto inicial-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/selecione_os_sinais" />

        <!--Layout FC-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/round_edge"
            android:orientation="vertical"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:padding="5dp"
                    android:src="@drawable/icon_fc_verde" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/frequ_ncia_card_aca"
                    android:textColor="@color/corPrimaria"
                    android:textSize="20sp" />


            </LinearLayout>

            <info.hoang8f.android.segmented.SegmentedGroup xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                segmentedgroup:sc_border_width="2dp"
                segmentedgroup:sc_corner_radius="10dp"
                segmentedgroup:sc_tint_color="@color/corPrimaria">

                <CheckBox
                    android:id="@+id/bt_basal_fc"
                    style="@style/RadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:clickable="false"
                    android:text="@string/basal" />

                <CheckBox
                    android:id="@+id/bt_durante_fc"
                    style="@style/RadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/durante" />

                <CheckBox
                    android:id="@+id/bt_final_fc"
                    style="@style/RadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:enabled="false"
                    android:text="@string/depois" />


                <CheckBox
                    android:id="@+id/bt_repouso_fc"
                    style="@style/RadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/repouso_min" />

            </info.hoang8f.android.segmented.SegmentedGroup>


        </LinearLayout>

        <!--Layout Dispneia-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_edge"
            android:orientation="vertical"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:padding="3dp"
                    android:src="@drawable/icon_pulmao_verde" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/dispneia"
                    android:textColor="@color/corPrimaria"
                    android:textSize="20sp" />


            </LinearLayout>

            <info.hoang8f.android.segmented.SegmentedGroup xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                segmentedgroup:sc_border_width="2dp"
                segmentedgroup:sc_corner_radius="10dp"
                segmentedgroup:sc_tint_color="@color/corPrimaria">

                <CheckBox
                    android:id="@+id/bt_basal_dispneia"
                    style="@style/RadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/basal" />

                <CheckBox
                    android:id="@+id/bt_durante_dispneia"
                    style="@style/RadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/durante" />

                <CheckBox

                    android:id="@+id/bt_final_dispneia"
                    style="@style/RadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/depois" />

                <CheckBox
                    android:id="@+id/bt_repouso_dispneia"
                    style="@style/RadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/repouso_min" />

            </info.hoang8f.android.segmented.SegmentedGroup>


        </LinearLayout>

        <!--Layout Fad MMII-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_edge"
            android:orientation="vertical"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:padding="3dp"
                    android:src="@drawable/icon_mmii_verde" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/fadiga_mmii"
                    android:textColor="@color/corPrimaria"
                    android:textSize="20sp" />


            </LinearLayout>

            <info.hoang8f.android.segmented.SegmentedGroup xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                segmentedgroup:sc_border_width="2dp"
                segmentedgroup:sc_corner_radius="10dp"
                segmentedgroup:sc_tint_color="@color/corPrimaria">

                <CheckBox
                    android:id="@+id/bt_basal_fadiga"
                    style="@style/RadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"

                    android:text="@string/basal" />

                <CheckBox
                    android:id="@+id/bt_durante_fadiga"
                    style="@style/RadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/durante" />

                <CheckBox
                    android:id="@+id/bt_final_fadiga"
                    style="@style/RadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/depois" />

                <CheckBox
                    android:id="@+id/bt_repouso_fadiga"
                    style="@style/RadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/repouso_min" />

            </info.hoang8f.android.segmented.SegmentedGroup>


        </LinearLayout>

        <!--Layout SPo2-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_edge"
            android:orientation="vertical"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:gravity="center">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:padding="3dp"
                    android:src="@drawable/icon_spo2_verde" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/spo2"
                    android:textColor="@color/corPrimaria"
                    android:textSize="20sp" />


            </LinearLayout>

            <info.hoang8f.android.segmented.SegmentedGroup xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                segmentedgroup:sc_border_width="2dp"
                segmentedgroup:sc_corner_radius="10dp"
                segmentedgroup:sc_tint_color="@color/corPrimaria">

                <CheckBox
                    android:id="@+id/bt_basal_spo2"
                    style="@style/RadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/basal" />

                <CheckBox
                    android:id="@+id/bt_durante_spo2"
                    style="@style/RadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/durante" />


            </info.hoang8f.android.segmented.SegmentedGroup>


        </LinearLayout>

        <!--Layout PA-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_edge"
            android:orientation="vertical"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:padding="3dp"
                    android:src="@drawable/icon_pa_verde" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/pressao_arterial"
                    android:textColor="@color/corPrimaria"
                    android:textSize="20sp" />


            </LinearLayout>

            <info.hoang8f.android.segmented.SegmentedGroup xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                segmentedgroup:sc_border_width="2dp"
                segmentedgroup:sc_corner_radius="10dp"
                segmentedgroup:sc_tint_color="@color/corPrimaria">

                <CheckBox
                    android:id="@+id/bt_basal_pa"
                    style="@style/RadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/basal" />

                <CheckBox
                    android:id="@+id/bt_final_pa"
                    style="@style/RadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/depois" />

                <CheckBox
                    android:id="@+id/bt_repouso_pa"
                    style="@style/RadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/repouso_min" />


            </info.hoang8f.android.segmented.SegmentedGroup>


        </LinearLayout>

        <!--Layout GC-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_edge"
            android:orientation="vertical"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:padding="3dp"
                    android:src="@drawable/icon_sangue_verde" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/glicemia_capilar"
                    android:textColor="@color/corPrimaria"
                    android:textSize="20sp" />


            </LinearLayout>

            <info.hoang8f.android.segmented.SegmentedGroup xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                segmentedgroup:sc_border_width="2dp"
                segmentedgroup:sc_corner_radius="10dp"
                segmentedgroup:sc_tint_color="@color/corPrimaria">

                <CheckBox
                    android:id="@+id/bt_basal_gc"
                    style="@style/RadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/basal" />

                <CheckBox
                    android:id="@+id/bt_final_gc"
                    style="@style/RadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/depois" />

                <CheckBox
                    android:id="@+id/bt_repouso_gc"
                    style="@style/RadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/repouso_min" />


            </info.hoang8f.android.segmented.SegmentedGroup>


        </LinearLayout>

        <Button
            android:id="@+id/btOk"
            android:layout_width="180dp"
            android:layout_height="38dp"
            android:layout_gravity="center"
            android:layout_margin="25dp"
            android:background="@color/corPrimariaEscura"
            android:text="@string/continuar"
            android:textColor="#d7ffffff" />

    </LinearLayout>

</ScrollView>
